# smspd

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  basic.pd  sms-help.pd  smsanal-help.pd  smsanal.c  smsbuf-help.pd  smsedit.c  smspd.c  smspd.h  smssynth~.c
.github/workflows/: DekenUpload.yml
Sources/: smsanal.c  smspd.h  smssynth~.c
help/: basic.pd  sms-help.pd  sms.pd_linux  smsanal-help.pd  smsbuf-help.pd  smsedit-help.pd  smssynth~-help.pd
libsms/: CMakeLists.txt
libsms/src/: hybridize.c  sms.c  sms.h
resources/: test.pd
src/: smsanal.c  smsedit.c  smspd.c  smspd.h  smssynth~.c
src-backup/: smsanal.c  smspd.c  smspd.h
